// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeLineScore should return an object with prevScore, score, diffScore properties for ["a"] 1`] = `
Object {
  "diffScore": 1,
  "found": "1/1",
  "prevScore": 0,
  "query": "query",
  "score": 1,
}
`;

exports[`computeLineScore should return an object with prevScore, score, diffScore properties for ["a,b,c,d,e"] 1`] = `
Object {
  "diffScore": 1,
  "found": "5/5",
  "prevScore": 0,
  "query": "query",
  "score": 1,
}
`;

exports[`computeLineScore should return an object with prevScore, score, diffScore properties for ["e,d,c,b,a"] 1`] = `
Object {
  "diffScore": 0.76,
  "found": "5/5",
  "prevScore": 0,
  "query": "query",
  "score": 0.76,
}
`;

exports[`computeLineScore should return an object with prevScore, score, diffScore properties for ["o,z,x,y,u"] 1`] = `
Object {
  "diffScore": 0,
  "found": "0/5",
  "prevScore": 0,
  "query": "query",
  "score": 0,
}
`;

exports[`printResultsAbstracts should output absctract 1`] = `
"\`\`\`diff
    master     PR      +/-
==========================================
+   10%      20%      10%
==========================================
\`\`\`
  "
`;

exports[`printResultsDetails should output absctract 1`] = `
"| file | Δ |  |
|---|---|---|
| Fromage | \`  10% <20%> (10%)\` | :chart_with_upwards_trend: |
| Entrées | \`  50% <20%> (30%)\` | :chart_with_downwards_trend: |
| Legumes | \`  0% <100%> (100%)\` | :chart_with_upwards_trend: |"
`;
